--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -19,7 +19,13 @@ jobs:
       - name: Enable egress filtering
         uses: bullfrogsec/bullfrog@v0.3
         with:
-          egress-policy: audit
+          egress-policy: block
+          allowed-domains: |
+            registry.npmjs.org
+            *.golang.org
+            storage.googleapis.com
+            *.github.com
+
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install deps
@@ -35,145 +41,145 @@ jobs:
             agent/agent
             action/dist
 
-  # check-dist-diff:
-  #   runs-on: ubuntu-22.04
-  #   permissions:
-  #     contents: read
-  #   needs: build
-  #   steps:
-  #     - name: Enable egress filtering
-  #       uses: bullfrogsec/bullfrog@v0.3
-  #       with:
-  #         egress-policy: audit
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: build-artifacts
-  #     - name: Check if dist has changed for the action/dist folder
-  #       run: |
-  #         git diff --exit-code --quiet action/dist || (echo "action/dist has changed, please commit the changes" && exit 1)
+  check-dist-diff:
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+    needs: build
+    steps:
+      - name: Enable egress filtering
+        uses: bullfrogsec/bullfrog@v0.3
+        with:
+          egress-policy: audit
+      - name: Checkout
+        uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
+      - name: Check if dist has changed for the action/dist folder
+        run: |
+          git diff --exit-code --quiet action/dist || (echo "action/dist has changed, please commit the changes" && exit 1)
 
-  # test-audit:
-  #   needs: build
-  #   runs-on: ubuntu-22.04
-  #   timeout-minutes: 2
+  test-audit:
+    needs: build
+    runs-on: ubuntu-22.04
+    timeout-minutes: 2
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+    steps:
+      - name: Checkout
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
 
-  #     - name: Enable egress filtering
-  #       uses: ./
-  #       with:
-  #         allowed-domains: |
-  #           *.google.com
+      - name: Enable egress filtering
+        uses: ./
+        with:
+          allowed-domains: |
+            *.google.com
 
-  #     - name: Make HTTP requests
-  #       run: |
-  #         curl https://www.google.com --output /dev/null
-  #         curl https://www.bing.com --max-time 3 --output /dev/null
+      - name: Make HTTP requests
+        run: |
+          curl https://www.google.com --output /dev/null
+          curl https://www.bing.com --max-time 3 --output /dev/null
 
-  # test-block:
-  #   needs: build
-  #   runs-on: ${{ matrix.os }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       os: [ubuntu-22.04, ubuntu-24.04]
-  #   timeout-minutes: 2
+  test-block:
+    needs: build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04, ubuntu-24.04]
+    timeout-minutes: 2
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+    steps:
+      - name: Checkout
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
 
-  #     - name: Enable egress filtering
-  #       uses: ./
-  #       with:
-  #         allowed-domains: |
-  #           *.google.com
-  #         egress-policy: block
+      - name: Enable egress filtering
+        uses: ./
+        with:
+          allowed-domains: |
+            *.google.com
+          egress-policy: block
 
-  #     - name: Make HTTP requests
-  #       run: source test/make_http_requests.sh
+      - name: Make HTTP requests
+        run: source test/make_http_requests.sh
 
-  #     - name: Make DNS requests
-  #       run: |
-  #         if dig example.com; then
-  #           echo 'Expected 'dig example.com' to fail, but it succeeded';
-  #           exit 1;
-  #         fi;
+      - name: Make DNS requests
+        run: |
+          if dig example.com; then
+            echo 'Expected 'dig example.com' to fail, but it succeeded';
+            exit 1;
+          fi;
 
-  #         if dig www.wikipedia.org; then
-  #           echo 'Expected 'dig www.wikipedia.org' to fail, but it succeeded';
-  #           exit 1;
-  #         fi;
+          if dig www.wikipedia.org; then
+            echo 'Expected 'dig www.wikipedia.org' to fail, but it succeeded';
+            exit 1;
+          fi;
 
-  # test-block-but-allow-any-dns-requests:
-  #   needs: build
-  #   runs-on: ubuntu-22.04
-  #   timeout-minutes: 2
+  test-block-but-allow-any-dns-requests:
+    needs: build
+    runs-on: ubuntu-22.04
+    timeout-minutes: 2
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+    steps:
+      - name: Checkout
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
 
-  #     - name: Enable egress filtering
-  #       uses: ./
-  #       with:
-  #         allowed-domains: |
-  #           *.google.com
-  #         dns-policy: any
-  #         egress-policy: block
+      - name: Enable egress filtering
+        uses: ./
+        with:
+          allowed-domains: |
+            *.google.com
+          dns-policy: any
+          egress-policy: block
 
-  #     - name: Make HTTP requests
-  #       run: source test/make_http_requests.sh
+      - name: Make HTTP requests
+        run: source test/make_http_requests.sh
 
-  #     - name: Make DNS requests
-  #       run: |
-  #         dig example.com
-  #         dig www.wikipedia.org
+      - name: Make DNS requests
+        run: |
+          dig example.com
+          dig www.wikipedia.org
 
-  # test-docker:
-  #   needs: build
-  #   runs-on: ubuntu-22.04
-  #   timeout-minutes: 2
+  test-docker:
+    needs: build
+    runs-on: ubuntu-22.04
+    timeout-minutes: 2
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+    steps:
+      - name: Checkout
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
 
-  #     - name: Enable egress filtering
-  #       uses: ./
-  #       with:
-  #         allowed-ips: |
-  #           172.17.0.0/16
-  #         allowed-domains: |
-  #           production.cloudflare.docker.com
-  #           docker.io
-  #           *.docker.io
-  #           www.google.com
-  #         egress-policy: block
+      - name: Enable egress filtering
+        uses: ./
+        with:
+          allowed-ips: |
+            172.17.0.0/16
+          allowed-domains: |
+            production.cloudflare.docker.com
+            docker.io
+            *.docker.io
+            www.google.com
+          egress-policy: block
 
-  #     - name: Test curl calls within Docker
-  #       run: |
-  #         docker run --rm --entrypoint sh alpine/curl:8.7.1 -c "
-  #           if ! curl https://www.google.com --max-time 5 --output /dev/null; then
-  #             echo 'Expected curl to www.google.com to succeed, but it failed';
-  #             exit 1;
-  #           fi;
+      - name: Test curl calls within Docker
+        run: |
+          docker run --rm --entrypoint sh alpine/curl:8.7.1 -c "
+            if ! curl https://www.google.com --max-time 5 --output /dev/null; then
+              echo 'Expected curl to www.google.com to succeed, but it failed';
+              exit 1;
+            fi;
 
-  #           if curl https://www.bing.com --max-time 5 --output /dev/null; then
-  #             echo 'Expected curl to www.bing.com to fail, but it succeeded';
-  #             exit 1;
-  #           fi;
-  #         "
+            if curl https://www.bing.com --max-time 5 --output /dev/null; then
+              echo 'Expected curl to www.bing.com to fail, but it succeeded';
+              exit 1;
+            fi;
+          "
 
-  #     - name: Nginx
-  #       run: source test/docker_nginx.sh
+      - name: Nginx
+        run: source test/docker_nginx.sh
 
-  #     - name: Nginx with port forwarding
-  #       run: source test/docker_nginx_port_forwarding.sh
+      - name: Nginx with port forwarding
+        run: source test/docker_nginx_port_forwarding.sh
 
   release:
     if: github.ref == 'refs/heads/main'
@@ -181,13 +187,14 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-    needs: [
+    needs:
+      [
         build,
-        # check-dist-diff,
-        # test-audit,
-        # test-block,
-        # test-block-but-allow-any-dns-requests,
-        # test-docker,
+        check-dist-diff,
+        test-audit,
+        test-block,
+        test-block-but-allow-any-dns-requests,
+        test-docker,
       ]
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
