--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Enable egress filtering
         uses: bullfrogsec/bullfrog@v0.3
         with:
-          egress-policy: audit
+          egress-policy: block
       - name: Checkout
         uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
@@ -203,7 +203,7 @@ jobs:
       - name: Enable egress filtering
         uses: bullfrogsec/bullfrog@v0.3
         with:
-          egress-policy: audit
+          egress-policy: block
       - name: Checkout
         uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
