--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -20,6 +20,7 @@ jobs:
         uses: bullfrogsec/bullfrog@v0.4
         with:
           egress-policy: block
+          dns-policy: any
           allowed-domains: |
             registry.npmjs.org
             *.golang.org
