--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -82,8 +82,8 @@ jobs:
 
       - name: Make HTTP requests
         run: |
-          curl https://www.google.com --output /dev/null
-          curl https://www.bing.com --max-time 3 --output /dev/null
+          timeout 3 curl https://www.google.com --output /dev/null
+          timeout 3 curl https://www.bing.com --output /dev/null
 
   test-block:
     needs: build
@@ -113,12 +113,12 @@ jobs:
 
       - name: Make DNS requests
         run: |
-          if dig example.com; then
+          if timeout 3 dig example.com; then
             echo 'Expected 'dig example.com' to fail, but it succeeded';
             exit 1;
           fi;
 
-          if dig www.wikipedia.org; then
+          if timeout 3 dig www.wikipedia.org; then
             echo 'Expected 'dig www.wikipedia.org' to fail, but it succeeded';
             exit 1;
           fi;
@@ -148,8 +148,8 @@ jobs:
 
       - name: Make DNS requests
         run: |
-          dig example.com
-          dig www.wikipedia.org
+          timeout 3 dig example.com
+          timeout 3 dig www.wikipedia.org
 
   test-docker:
     needs: build
@@ -175,12 +175,12 @@ jobs:
       - name: Test curl calls within Docker
         run: |
           docker run --rm --entrypoint sh alpine/curl:8.7.1 -c "
-            if ! curl https://www.google.com --max-time 5 --output /dev/null; then
+            if ! timeout 3 curl https://www.google.com --output /dev/null; then
               echo 'Expected curl to www.google.com to succeed, but it failed';
               exit 1;
             fi;
 
-            if curl https://www.bing.com --max-time 5 --output /dev/null; then
+            if timeout 3 curl https://www.bing.com --output /dev/null; then
               echo 'Expected curl to www.bing.com to fail, but it succeeded';
               exit 1;
             fi;
