--- a/action/package.json
+++ b/action/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.14.9",
     "esbuild": "0.21.5",
     "prettier": "3.3.2",
     "ts-node": "10.9.2",
