doc: add clarification

--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ inputs:
     type: string
     default: ${{ runner.temp }}/agent-logs
   local-agent-path:
-    description: "Path to a local agent binary to use instead of fetching it from Github. This is useful for testing changes to the agent without releasing it. The path is relative to the action directory."
+    description: "Path to a local agent binary to use instead of fetching it from Github. This is useful for testing changes to the agent without releasing it. The path is relative to the root action directory (where this action.yml is located)."
     type: string
     default: ""
 
