test: adding test for untrusted dns server

--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -133,6 +133,11 @@ jobs:
             exit 1;
           fi;
 
+          if timeout 5 dig @8.8.8.8 www.google.com; then
+            echo 'Expected 'dig @8.8.8.8 www.google.com' to fail, but it succeeded';
+            exit 1;
+          fi;
+
   test-block-but-allow-any-dns-requests:
     needs: build
     runs-on: ubuntu-22.04
