--- a/action/package.json
+++ b/action/package.json
@@ -7,11 +7,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.14.9",
+    "@eslint/js": "9.6.0",
+    "@types/eslint__js": "8.42.3",
+    "@types/node": "20.14.9",
     "esbuild": "0.22.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
     "prettier": "3.3.2",
     "ts-node": "10.9.2",
-    "typescript": "5.5.2"
+    "typescript": "5.5.2",
+    "typescript-eslint": "7.15.0"
   },
   "dependencies": {
     "@actions/core": "1.10.1"
