--- a/action.yml
+++ b/action.yml
@@ -13,18 +13,18 @@ inputs:
     description: "The egress policy to enforce. Options: 'audit' (default) or 'block'."
     type: string
     default: "audit"
-  log-directory:
-    description: "Directory to store log files."
-    type: string
-    default: ${{ runner.temp }}/agent-logs
-  local-agent-path:
-    description: "Path to a local agent binary to use instead of fetching it from Github. This is useful for testing changes to the agent without releasing it. The path is relative to the root action directory (where this action.yml is located)."
-    type: string
-    default: ""
-  agent-download-base-url:
-    description: "Base URL for fetching the agent binary. This is useful for testing changes in a fork. The URL should end with a slash."
+  _agent-download-base-url:
+    description: "(Internal) Base URL for fetching the agent binary. This is useful for testing changes in a fork. The URL should end with a slash."
     type: string
     default: "https://github.com/bullfrogsec/bullfrog/releases/download/"
+  _log-directory:
+    description: "(Internal) Directory to store log files."
+    type: string
+    default: ${{ runner.temp }}/agent-logs
+  _local-agent-path:
+    description: "(Internal) Path to a local agent binary to use instead of fetching it from Github. This is useful for testing changes to the agent without releasing it. The path is relative to the root action directory (where this action.yml is located)."
+    type: string
+    default: ""
 
 runs:
   using: "node20"
