--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -295,8 +295,7 @@ jobs:
         uses: bullfrogsec/bullfrog@v0
 
         with:
-          # TODO: set to block once we confirm the domains required for the release process
-          egress-policy: audit
+          egress-policy: block
           allowed-domains: |
             uploads.github.com
 
@@ -358,8 +357,7 @@ jobs:
       - name: Enable egress filtering
         uses: bullfrogsec/bullfrog@v0
         with:
-          # TODO: set to block once we confirm the domains required for the release process
-          egress-policy: audit
+          egress-policy: block
 
       - name: Checkout
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
