--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           make bootstrap
           make build
+          make test.unit
 
       - uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808
         with:
