--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,4 @@
 node_modules/
 .vagrant/*
 !.vagrant/provision.sh
-
-# Ignore generated files when running the agent locally
-allowed_domains.txt
-allowed_ips.txt
-
-agent/agent
+.DS_Store
